2011-02-02  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): New minor version number

	* src/minqa.cpp (calfun): check for finite value of objective
	function.

2011-01-27  Douglas Bates  <bates@stat.wisc.edu>

	* src/minqa.cpp: Expand RCPP_FUNCTION_X macros to make debugging
	easier. 

2010-11-19  Douglas Bates  <bates@stat.wisc.edu>

	* src/Makevars (PKG_LIBS): Change to the backticks version

2010-11-14  Douglas Bates  <bates@stat.wisc.edu>

	* tests/newuoa.R: added test for newuoa which should signal an
	error.

	* src/minqa.cpp: reverted the removal of the ierr argument in
	calls to Fortran code.

2010-08-10  John Nash  <nashjc@uottawa.ca>
        * man/bobyqa.Rd: Added revised codes for error exits and
	tests for some of these errors. Note that the error for npt
	(number of interpolation points) out of desired range does not
	work. It appears the minqa.R code forces a valid setting, and
	ignores user input.

        * man/newuoa.Rd: Added revised codes for error exits and
	tests for some of these errors. Note that the error for npt
	(number of interpolation points) out of desired range does not
	work. It appears the minqa.R code forces a valid setting, and
	ignores user input.

        * man/uobyqa.Rd: Added revised codes for error exits and
	tests for some of these errors. 

        * src/uobyq*.f: Put in IERR exits and suppressed minqer() call.
	Also put IERR in calling sequence.

        * src/newuo*.f: Put in IERR exits and suppressed minqer() call.
	Also put IERR in calling sequence.

        * src/minqa.cpp: Put in IERR for newuoa and uobyqa. This involves
	several changes, including * and & modifiers to variables.

2010-08-09  Douglas Bates  <bates@stat.wisc.edu>

	* man/bobyqa.Rd: Add a check on the error code.  (Note: the R code
	should be modified to look for the error code in the returned
	value and produce an appropriate error message.)

	* src/minqa.cpp: pass ierr in call to rval from bobyqa.  (Had it